--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "mf-refactoring-2nd",
   "version": "1.0.0",
   "scripts": {
-    "test": "mocha --watch --recursive --require babel-core/register"
+    "test": "mocha --watch --recursive --require babel-core/register",
+    "inf": "nodemon inflearn/start.js"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^5.12.1",
+    "esm": "^3.2.25",
     "js-money": "^0.6.3",
     "mocha": "^5.2.0",
     "sinon": "^7.3.2"
