--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "eslint": "^5.12.1",
     "esm": "^3.2.25",
     "js-money": "^0.6.3",
     "mocha": "^5.2.0",
@@ -18,5 +17,11 @@
   "main": "index.js",
   "repository": "https://github.com/inflearn/study-refactoring2nd.git",
   "author": "hoori <freedom09@inflearn.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
+  },
+  "type": "module"
 }
