--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "mocha --watch --recursive --require babel-core/register",
-    "inf": "nodemon inflearn/start.js"
+    "inf": "nodemon inflearn/start.js",
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
